--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="yellow">#FFC801</color>
+    <color name="colorPrimary">#890620</color>
+
 
     <color name="thunderstorm">#1361FD</color>
     <color name="drizzle">#526FA8</color>
